src/components/pages/Song.css
.Song {
  display: flex;
  flex-direction: column;
}

.Song__Pattern {
  align-items: center;
  justify-content: center;
  display: flex;
  margin: 1rem;
}

.Song__AddContainer {
  display: flex;
  flex-direction: column;
  padding: 1rem;
}

